--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/schedule": "^0.4.1",
     "@nestjs/typeorm": "^7.1.5",
     "apollo-server-express": "^2.19.1",
+    "aws-sdk": "^2.834.0",
     "bcrypt": "^5.0.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
